ConjuntoDeFerramentas/yaml - Atualizados/transmission/deployment.yml
# deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-deployment
  namespace: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: linuxserver/transmission:latest
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: nfs-storage
          mountPath: /downloads
      volumes:
      - name: nfs-storage
        nfs:
          server: 192.168.3.100
          path: /path/to/nfs/share
          readOnly: false
