ConjuntoDeFerramentas/yaml - Atualizados/transmission/transmission-service.yml
## transmission-service.yml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
spec:
  selector:
    app: transmission
  ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
  - protocol: TCP
    port: 51413
    targetPort: 51413
  type: ClusterIP
